# optimalrcs

./: .gitignore  LICENSE.txt  OptimalRCs_old.py  README.md  Untitled.ipynb  boundaries.py  cut_profiles.py  metrics.py  nonparametrics.py  optimalrcs.py  paper snippets.ipynb  plots.py  pyproject.toml  test_boundaries.py  test_committorne.py  test_cut_profiles.py  test_metrics.py  test_mfptne.py
.ipynb_checkpoints/: paper snippets-checkpoint.ipynb
optimalrcs/: boundaries.py  cut_profiles.py  metrics.py  nonparametrics.py  optimalrcs.py  plots.py
optimalrcs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_boundaries.py  test_committor.py  test_committorne.py  test_cut_profiles.py  test_metrics.py  test_mfptne.py  test_plots.py
